pado_visualize/static_src/css/base.scss
@import "node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss";
$fa-font-path: "../../../node_modules/@fortawesome/fontawesome-free/webfonts";
@import "node_modules/@fortawesome/fontawesome-free/scss/solid.scss";
@import "colors";

/* fonts */
$primary-font: "Lato", sans-serif;

/* latin-ext */
@font-face {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 300;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/lato/v17/S6u9w4BMUTPHh7USSwaPGQ3q5d0N7w.woff2) format('woff2');
  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 300;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/lato/v17/S6u9w4BMUTPHh7USSwiPGQ3q5d0.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}
/* latin-ext */
@font-face {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/lato/v17/S6uyw4BMUTPHjxAwXiWtFCfQ7A.woff2) format('woff2');
  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/lato/v17/S6uyw4BMUTPHjx4wXiWtFCc.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}
/* latin-ext */
@font-face {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 900;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/lato/v17/S6u9w4BMUTPHh50XSwaPGQ3q5d0N7w.woff2) format('woff2');
  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 900;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/lato/v17/S6u9w4BMUTPHh50XSwiPGQ3q5d0.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

/* tags */
* {
  font-family: $primary-font;
}

.pado.pado-root {
  height: 100vh;
  display: grid;
  grid-template: auto 1fr / auto 1fr auto;
}

.pado header {
  padding: 0 1em;
  grid-column: 2 / 3;
}

.pado nav {
  grid-row: 1 / 4;
  grid-column: 1 / 2;
  max-width: 240px;
  background: $color-primary-dark;
  padding: 1.4em 1em;
}

$menu-border-radius: 15px;
$menu-text-color: #eee;
$menu-text-color-subtle: #bbb;

.pado-sidebar .header {
  a {
    display: grid;
    grid-template: 1fr auto / 1fr auto;
    padding: 10px 10px;
    border-radius: $menu-border-radius;
    text-decoration: none;
    background: rgba(255, 255, 255, 0.0);
    transition: background 400ms;

    &:hover {
      background: rgba(255, 255, 255, 0.05);
    }

    img {
      width: 34px;
      grid-column: 1;
      grid-row: 1 / 3;
      border-radius: 14px;
    }

    h2 {
      font-size: 20px;
      font-weight: 300;
      margin: 0;
      padding-left: 8px;
      color: $menu-text-color;
    }

    h3 {
      margin: 0;
      font-weight: 200;
      font-size: 10px;
      padding-left: 9px;
      color: $menu-text-color-subtle;
      text-transform: lowercase;
    }
  }
}

.pado-sidebar .menu {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  padding-left: 0;
  margin-bottom: 0;
  list-style: none;

  .menu-item {
    margin-top: 3px;
    margin-bottom: 2px;

    a {
      display: flex;
      flex-direction: row;
      padding: 10px 10px;
      font-weight: 300;
      border-radius: $menu-border-radius;
      text-decoration: none;
      background: rgba(255, 255, 255, 0.0);
      transition: background 400ms, color 400ms;
      color: $menu-text-color-subtle;

      &:hover {
        background: rgba(255, 255, 255, 0.05);
        color: $menu-text-color;
      }
      &:visited {
        color: $menu-text-color-subtle;
      }

      span.menu-icon {
        display: flex;
        width: 34px;
        color: inherit;
        i {
          margin: auto;
        }
      }

      span.menu-text {
        color: inherit;
        padding-left: 6px;
      }
    }

    input[type="checkbox"] {
      accent-color: $color-primary-light;
      flex-direction: row;
      width: 16px;
      height: 16px;
      margin-top: 2px;
      margin-left: 18px;
      padding: 10px 10px;
      font-weight: 300;
      border-radius: $menu-border-radius;
      text-decoration: none;
      background: rgba(255, 255, 255, 0.0);
      transition: background 400ms, color 400ms;

      :after {
        content: "\f05d";
      }

      + label {
        display: inline-flex;
        color: $menu-text-color-subtle;
        padding-left: 8px;
        font-weight: 300;
        margin-top: 0;
        vertical-align: top;
      }
    }

  }

  .menu-item.active {
    a {
      background: rgba(255, 255, 255, 0.05);
      color: $menu-text-color;
    }
  }
}



.pado main {
  grid-column: 2 / 3;
}

.pado footer {
  grid-column: 1 / 3;
}

